@@ -21,7 +21,6 @@
 #ifndef AccessibilityProgressIndicator_h
 #define AccessibilityProgressIndicator_h
 
-#if ENABLE(METER_ELEMENT)
 #include "AccessibilityRenderObject.h"
 
 namespace WebCore {
@@ -63,7 +62,5 @@ private:
 
 
 } // namespace WebCore
-
-#endif // ENABLE(METER_ELEMENT)
 
 #endif // AccessibilityProgressIndicator_h
